@@ -19,8 +19,8 @@ import (
 	"bytes"
 	"crypto/sha512"
 	"database/sql"
-	"encoding/json"
 	_ "embed"
+	"encoding/json"
 	"fmt"
 	"html/template"
 	"sort"
